--- a/pset2/index.html
+++ b/pset2/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 </head>
 
 <body>
@@ -17,6 +17,7 @@
     <div class="jumbotron jumbotron-fluid title-background">
       <h1 class="display-4">Playlist Name</h1>
       <p class="lead">Description of Playlist</p>
+      <input class="js-input form-control form-control-lg mt-5" type="text" placeholder="Search...">
     </div>
     <div class='song-list'>
       <div class='row mb-2'>
@@ -34,14 +35,14 @@
           <img src="" class="rounded" style='width: 50px; height: 50px;'>
         </div>
         <div class='col-11'>
-          <p class='mb-0 mt-1 song-name'>Song Name</p>
+          <p class='mb-0 mt-1 js-song-name song-name'>Song Name</p>
           <p class='my-0 song-artists'>Song Artists</p>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
