moved it out of file bs

--- a/pset1/index.html
+++ b/pset1/index.html
@@ -15,5 +15,7 @@
         <div class='col-4 box box-6'></div><div class='col-4 box box-7'></div><div class='col-4 box box-8'></div>
       </div>
     </div>
+
+    <script src='main.js'></script>
   </body>
 </html>
